crates/core/src/snapshots/core__select_album.snap
---
source: crates/core/src/lib.rs
expression: run_query(&query)
---
[
  {
    "AlbumId": 6,
    "ArtistId": 4,
    "Title": "Jagged Little Pill"
  }
]
