crates/core/src/snapshots/core__select_horse_and_species.snap
---
source: crates/core/src/lib.rs
expression: run_query(&query)
---
[
  {
    "animal_id": 1,
    "animal_name": "horse",
    "species_id": 1,
    "species_name": "mammal"
  }
]
